--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -380,5 +380,6 @@ ${item.suggested_reply}
         });
 
     </script>
+    <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.com/widget?wc=siq2b8fd05880debb5c0478b2635a473392" defer></script>
 </body>
 </html>
